# downstream/src/main/kotlin/com/example/connect/downstream/GetMovieDetailsController.kt
@@ -1,9 +1,9 @@
 package com.example.connect.downstream
 
 import io.swagger.v3.oas.annotations.Operation
+import io.swagger.v3.oas.annotations.media.Schema
 import org.springframework.http.HttpStatus.NOT_FOUND
 import org.springframework.web.bind.annotation.*
-import java.time.Year
 
 @RestController
 class GetMovieDetailsController(
@@ -12,9 +12,9 @@ class GetMovieDetailsController(
 
     @Operation(summary = "Get movie details", operationId = "movieDetails")
     @GetMapping("/movies/{title}")
-    fun handle(@PathVariable title: String): Any {
+    fun handle(@PathVariable title: String): Response {
         return movieCatalogue.findByTitle(title)
-            ?.let { Response(it.title, it.year) }
+            ?.let { Response(it.title, it.year.toString()) }
             ?: throw MovieNotFound(title)
     }
 
@@ -22,5 +22,6 @@ class GetMovieDetailsController(
     @ResponseStatus(NOT_FOUND)
     fun handleMovieNotFound() {}
 
-    data class Response(val title: String, val year: Year)
+    @Schema(name = "MovieDetailsResponse")
+    data class Response(val title: String, val year: String)
 }
